update on q4